<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">HT203U Thermal</string>
    <string name="waiting">Plug in the camera…</string>
    <string name="calibrate">Probe XU</string>
    <string name="range_normal">Dump meta</string>
    <string name="range_high">Dump meta</string>
    <string name="unit_c">°C</string>
    <string name="unit_f">°F</string>
    <string name="log">Log</string>
    <string name="rotate">Rotate</string>
</resources>
